# tabterm

./: com.github.munchkinhalfling.tabterm.json  meson.build  readme.md  tabterm.desktop
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/data/: com.github.munchkinhalfling.tabterm.appdata.xml
builddir/meson-info/: intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/src/: tabterm  tabterm-resources.c  tabterm-resources.h
builddir/src/tabterm.p/: main.c  window.c
data/: com.github.munchkinhalfling.tabterm.appdata.xml.in  com.github.munchkinhalfling.tabterm.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: app.css  main.vala  meson.build  tabterm.gresource.xml  terminal.vala  window.ui  window.ui~  window.vala
